--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="header">
-            <h1>Today is Olasoji's birthday 🎉</h1>
+            <h1>Today is Oyin's birthday 🎉</h1>
             <img id="bff-img" src="images/Olasoji.jpeg">
             <h2 id="bday-age">35 years old</h2>
             <h4 id="bday-date">06.09.2022</h4>
